--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "16.3.0"
+  },
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
